Remove underscore in user name to properly parse.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,8 +43,8 @@
         <item>"@Josh"</item>
         <item>"@Chris"</item>
         <item>"@David"</item>
-        <item>"@Jason_Hammons"</item>
-        <item>"@Jason_Poe"</item>
+        <item>"@JasonHammons"</item>
+        <item>"@JasonPoe"</item>
         <item>"@Ramiro"</item>
         <item>"@Kyle"</item>
         <item>"@Joonho"</item>
